Supervisor studio Request Day off list

--- a/user_therapist/profile_kehadiran_dayoff.html
+++ b/user_therapist/profile_kehadiran_dayoff.html
@@ -18,7 +18,7 @@ License: You must have a valid license purchased only from themeforest(the above
 	<head>
 		<base href="../">
 		<meta charset="utf-8" />
-		<title>Kehadiran | Therapist Fabulash</title>
+		<title>List Request Day-Off | Therapist Fabulash</title>
 		<meta name="description" content="Updates and statistics">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -287,6 +287,9 @@ License: You must have a valid license purchased only from themeforest(the above
 										<span class="kt-subheader__breadcrumbs-separator"></span>
 										<a href="user_therapist/profile_kehadiran.html" class="kt-subheader__breadcrumbs-link">
 											Kehadiran </a>
+										<span class="kt-subheader__breadcrumbs-separator"></span>
+										<a href="user_therapist/profile_kehadiran_dayoff.html" class="kt-subheader__breadcrumbs-link">
+											List request day-off </a>
 									</div>
 								</div>
 							</div>
@@ -308,7 +311,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													<i class="flaticon2-user-outline-symbol"></i>
 												</span>
 												<h3 class="kt-portlet__head-title">
-													Kehadiran
+													List Request Day-Off
 												</h3>
 											</div>
 										</div>
