Superadmin nama usernya dari admin menjadi superadmin

--- a/user_superadmin/Tidak Terpakai/finance_pemasukan.html
+++ b/user_superadmin/Tidak Terpakai/finance_pemasukan.html
@@ -243,7 +243,7 @@ License: You must have a valid license purchased only from themeforest(the above
 							<div class="kt-header__topbar-item kt-header__topbar-item--user">
 								<div class="kt-header__topbar-wrapper" data-toggle="dropdown" data-offset="0px,0px">
 									<div class="kt-header__topbar-user">
-										<span id="userName" name="userName" class="kt-header__topbar-username kt-hidden-mobile">Admin</span>
+										<span id="userName" name="userName" class="kt-header__topbar-username kt-hidden-mobile">Superadmin</span>
 										<img id="userImage" name="userImage" style="margin-left: 5px" alt="Pic" class="kt-radius-100" src="assets/media/users/user5.jpg" data-pagespeed-url-hash="619118654" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
 									</div>
 								</div>
