--- a/user_therapist/inventory_pemakaian.html
+++ b/user_therapist/inventory_pemakaian.html
@@ -142,8 +142,8 @@ License: You must have a valid license purchased only from themeforest(the above
 									<div class="kt-menu__submenu "><span class="kt-menu__arrow"></span>
 										<ul class="kt-menu__subnav">
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_therapist/inventory_stock.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Stock</span></a></li>
-											<li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="user_therapist/inventory_request.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Request Inventory</span></a></li>
-											<li class="kt-menu__item " aria-haspopup="true"><a href="user_therapist/inventory_pemakaian.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Pemakaian Inventory</span></a></li>
+											<li class="kt-menu__item " aria-haspopup="true"><a href="user_therapist/inventory_request.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Request Inventory</span></a></li>
+											<li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="user_therapist/inventory_pemakaian.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Pemakaian Inventory</span></a></li>
 										</ul>
 									</div>
 								</li>
