--- a/user_gudang/profile_kehadiran_dayoff.html
+++ b/user_gudang/profile_kehadiran_dayoff.html
@@ -18,7 +18,7 @@ License: You must have a valid license purchased only from themeforest(the above
 	<head>
 		<base href="../">
 		<meta charset="utf-8" />
-		<title>Kehadiran | Gudang Fabulash</title>
+		<title>List Request Day-Off | Gudang Fabulash</title>
 		<meta name="description" content="Updates and statistics">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -292,6 +292,9 @@ License: You must have a valid license purchased only from themeforest(the above
 										<span class="kt-subheader__breadcrumbs-separator"></span>
 										<a href="user_gudang/profile_kehadiran.html" class="kt-subheader__breadcrumbs-link">
 											Kehadiran </a>
+                                        <span class="kt-subheader__breadcrumbs-separator"></span>
+										<a href="user_gudang/profile_kehadiran_dayoff.html" class="kt-subheader__breadcrumbs-link">
+											List request day-off </a>
 									</div>
 								</div>
 							</div>
@@ -304,70 +307,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
                             <div class="row row-centered">
 
-                                <div class="col-12">
-									<div class="row">
-		                                <div class="col-lg-3 col-md-6">
-		                                    <div class="kt-portlet kt-portlet--height-fluid">
-		                                    	<div class="kt-widget14">
-		                                    		<div class="kt-widget14__header" style="margin-bottom:0px;">
-		                                    			<h6>
-		                                    				Total Hari Kerja
-		                                    			</h6>
-		                                    			<h3 class="kt-widget14__desc kt-margin-t-5 color-main-dark">
-		                                    				<span name="kehadiran_kerja">200</span><span> Hari</span>
-		                                    			</h3>
-		                                    		</div>
-		                                    	</div>
-		                                    </div>
-		                                </div>
-		                                <div class="col-lg-3 col-md-6">
-		                                    <div class="kt-portlet kt-portlet--height-fluid">
-		                                    	<div class="kt-widget14">
-		                                    		<div class="kt-widget14__header" style="margin-bottom:0px;">
-		                                    			<h6>
-		                                    				Sisa Cuti
-		                                    			</h6>
-		                                    			<h3 class="kt-widget14__desc kt-margin-t-5 color-main-dark">
-		                                    				<span name="kehadiran_cuti">20</span><span> Hari</span>
-		                                    			</h3>
-		                                    		</div>
-		                                    	</div>
-		                                    </div>
-		                                </div>
-		                                <div class="col-lg-3 col-md-6">
-		                                    <div class="kt-portlet kt-portlet--height-fluid">
-		                                    	<div class="kt-widget14">
-		                                    		<div class="kt-widget14__header" style="margin-bottom:0px;">
-		                                    			<h6>
-		                                    				Jumlah Izin
-		                                    			</h6>
-		                                    			<h3 class="kt-widget14__desc kt-margin-t-5 color-main-dark">
-		                                    				<span name="kehadiran_izin">10</span><span> Hari</span>
-		                                    			</h3>
-		                                    		</div>
-		                                    	</div>
-		                                    </div>
-		                                </div>
-		                                <div class="col-lg-3 col-md-6">
-		                                    <div class="kt-portlet kt-portlet--height-fluid">
-		                                    	<div class="kt-widget14">
-		                                    		<div class="kt-widget14__header" style="margin-bottom:0px;">
-		                                    			<h6>
-		                                    				Jumlah Sakit
-		                                    			</h6>
-		                                    			<h3 class="kt-widget14__desc kt-margin-t-5 color-main-dark">
-		                                    				<span name="kehadiran_sakit">5</span><span> Hari</span>
-		                                    			</h3>
-		                                    		</div>
-		                                    	</div>
-		                                    </div>
-		                                </div>
-									</div>
-								</div>
-
 								<div class="col-12">
-
-                                    <!--begin::Portlet-->
 									<div class="kt-portlet">
 										<div class="kt-portlet__head">
 											<div class="kt-portlet__head-label">
@@ -375,63 +315,17 @@ License: You must have a valid license purchased only from themeforest(the above
 													<i class="flaticon2-user-outline-symbol"></i>
 												</span>
 												<h3 class="kt-portlet__head-title">
-													Kehadiran
+													List Request Day-Off
 												</h3>
-											</div>
-                                            <div class="kt-portlet__head-toolbar">
-												<button type="button" class="btn btn-sm btn-success" data-toggle="modal" data-target="#kt_modal_request_dayoff"><i class="flaticon2-graphic-design"></i> Request Day-Off</button>
-												<a class="kt-margin-l-5" href="user_gudang/profile_kehadiran_dayoff.html"><button type="button" class="btn btn-sm btn-outline-success"><i class="flaticon2-list-3"></i> List Request Day-Off <i class="flaticon2-right-arrow" style="font-size: 0.6rem"></i></button></a>
 											</div>
 										</div>
 										<div class="kt-portlet__body">
-                                            <table class="table table-bordered table-hover table-checkable" id="table_kehadiran"></table>
+                                            <table class="table table-bordered table-hover table-checkable" id="table_kehadiran_request_dayoff"></table>
 										</div>
 									</div>
-
-									<!--end::Portlet-->
 								</div>
+
 							</div>
-
-                            <!-- begin:: Modal -->
-                            <div class="modal fade" id="kt_modal_request_dayoff" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                <div class="modal-dialog" role="document">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title" id="exampleModalLabel">Request Day-Off</h5>
-                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            </button>
-                                        </div>
-										<form id="kt_form_dayoff">
-	                                        <div class="modal-body">
-                                                <div class="form-group row">
-                                                    <label for="example-text-input" class="col-3 col-form-label">Tanggal</label>
-                                                    <div class="col-9">
-                                                        <input type="text" class="form-control kt_multidatepicker" placeholder="Tanggal" name="dayoff_tanggal">
-                                                    </div>
-                                                </div>
-                                                <div class="form-group row">
-                                                    <label for="example-text-input" class="col-3 col-form-label">Status</label>
-                                                    <div class="col-9">
-                                                        <select class="form-control" name="dayoff_status" placeholder="Status">
-                                                            <option value="" disabled selected>Status</option>
-    														<option>Cuti Tahunan</option>
-    														<option>Izin</option>
-    														<option>Sakit</option>
-    														<option>Lain-lain</option>
-    													</select>
-                                                    </div>
-                                                </div>
-	                                        </div>
-	                                        <div class="modal-footer" style="justify-content:center;">
-	                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-	                                            <button type="submit" class="btn btn-success" id="kt_sweetalert_berhasil">Submit</button>
-	                                        </div>
-										</form>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <!--end::Modal-->
 
 						</div>
 
@@ -509,42 +403,6 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--begin::Page Scripts(used by this page) -->
 		<script src="assets/js/script/datatable_gudang.js"></script>
 		<script src="assets/js/custom/datepicker.js" type="text/javascript"></script>
-
-        <script>
-            // Sweetalert
-            $('#kt_sweetalert_berhasil').click(function(e) {
-                swal.fire({
-                    title: "Berhasil",
-                    text: "Request day-off berhasil dilakukan.",
-                    type: "success",
-                    confirmButtonText: "Ok",
-                    confirmButtonClass: "btn btn-brand"
-                }).then(function(result) {
-                    // location.reload();
-                });
-            });
-
-            // Form Validation
-            $('#kt_form_dayoff').validate({
-                // define validation rules
-	            rules: {
-	                dayoff_tanggal: {
-	                    required: true,
-	                },
-	                dayoff_status: {
-	                    required: true
-	                }
-	            },
-
-	            invalidHandler: function(event, validator) {
-	                KTUtil.scrollTop();
-	            },
-	            submitHandler: function(form) {
-	                //form[0].submit(); // submit the form
-	            }
-            })
-
-        </script>
 
 		<!--end::Page Scripts -->
 	</body>
