--- a/user_gudang/profile_kehadiran.html
+++ b/user_gudang/profile_kehadiran.html
@@ -421,6 +421,21 @@ License: You must have a valid license purchased only from themeforest(the above
     													</select>
                                                     </div>
                                                 </div>
+                                                <div class="form-group row">
+                                                    <label for="example-text-input" class="col-3 col-form-label">Notes</label>
+                                                    <div class="col-9">
+														<textarea class="form-control" name="dayoff_notes" rows="3" placeholder="Notes"></textarea>
+                                                    </div>
+                                                </div>
+                                                <div class="form-group row">
+                                                    <label for="example-text-input" class="col-3 col-form-label">Foto</label>
+                                                    <div class="col-9">
+														<div class="custom-file">
+															<input type="file" class="custom-file-input" name="dayoff_foto" accept="image/*">
+															<label class="custom-file-label">Choose file</label>
+														</div>
+                                                    </div>
+                                                </div>
 	                                        </div>
 	                                        <div class="modal-footer" style="justify-content:center;">
 	                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -529,11 +544,17 @@ License: You must have a valid license purchased only from themeforest(the above
                 // define validation rules
 	            rules: {
 	                dayoff_tanggal: {
-	                    required: true,
+	                    required: true
 	                },
 	                dayoff_status: {
 	                    required: true
-	                }
+	                },
+					dayoff_notes: {
+						required: true
+					},
+					dayoff_foto: {
+						required: true
+					}
 	            },
 
 	            invalidHandler: function(event, validator) {
