Perbaikan multidatepicker untuk request dayoff

--- a/user_supervisor_studio/profile_kehadiran.html
+++ b/user_supervisor_studio/profile_kehadiran.html
@@ -406,7 +406,14 @@ License: You must have a valid license purchased only from themeforest(the above
                                                 <div class="form-group row">
                                                     <label for="example-text-input" class="col-3 col-form-label">Tanggal</label>
                                                     <div class="col-9">
-                                                        <input type="text" class="form-control kt_multidatepicker" placeholder="Tanggal" name="dayoff_tanggal">
+														<div class="input-group date">
+	                                                        <input type="text" class="form-control kt_multidatepicker" placeholder="Tanggal" name="dayoff_tanggal">
+															<div class="input-group-append">
+																<span class="input-group-text">
+																	<i class="la la-calendar-check-o"></i>
+																</span>
+															</div>
+														</div>
                                                     </div>
                                                 </div>
                                                 <div class="form-group row">
@@ -538,7 +545,7 @@ License: You must have a valid license purchased only from themeforest(the above
 						required: true
 					},
 					dayoff_foto: {
-						required: true
+						required: false
 					}
 	            },
 
