admin perbaikan datepicker/search table dan datepicker umum

--- a/user_admin/customer_detail.html
+++ b/user_admin/customer_detail.html
@@ -356,11 +356,10 @@ License: You must have a valid license purchased only from themeforest(the above
 													</div>
 												</div>
                                             </div>
-
-											<form class="kt-margin-b-10">
+											<form class="kt-margin-b-5">
     											<div class="row justify-space-between">
 													<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
-														<input readonly type="text" class="form-control kt-input" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu"/>
+														<input readonly type="text" class="form-control kt-datepicker" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="datepicker_customer_detail"/>
 														<div class="input-group-append">
 															<span class="input-group-text">
 																<i class="la la-calendar"></i>
@@ -368,7 +367,7 @@ License: You must have a valid license purchased only from themeforest(the above
 														</div>
 													</div>
 													<div class="col-lg-4 col-sm-6">
-	    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
+	    												<input type="text" class="form-control" placeholder="Search" id="search_customer_detail">
 													</div>
     											</div>
     										</form>
@@ -454,6 +453,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
 		<!--begin::Page Scripts(used by this page) -->
         <script src="assets/js/script/datatable_admin.js"></script>
+		<script src="assets/js/custom/datepicker.js"></script>
 
 		<script>
 			function printFunction() {
