--- a/user_admin/index.html
+++ b/user_admin/index.html
@@ -353,8 +353,6 @@ License: You must have a valid license purchased only from themeforest(the above
 												<div class="form-group row">
 													<label class="col-4 col-form-label">Opsi Treatment :</label>
 													<div class="col-8">
-														<div class="kt-radio-list">
-														</div>
 														<div class="kt-checkbox-list">
 															<label class="kt-checkbox kt-checkbox--brand">
 																<input type="checkbox" name="treatment_type"> Nail Treatment
@@ -365,6 +363,7 @@ License: You must have a valid license purchased only from themeforest(the above
 																<span></span>
 															</label>
 														</div>
+														<span class="form-text text-muted kt-hidden" style="margin:0px;"></span>
 													</div>
 												</div>
 												<div class="form-group row">
@@ -380,6 +379,7 @@ License: You must have a valid license purchased only from themeforest(the above
 																<span></span>
 															</label>
 														</div>
+														<span class="form-text text-muted kt-hidden"></span>
 													</div>
 												</div>
 											</div>
@@ -418,7 +418,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													<label class="col-sm-4 col-form-label">Tanggal Lahir :</label>
 													<div class="col-sm-8">
 														<div class="input-group date">
-															<input type="text" class="form-control" readonly="" placeholder="Tanggal" id="kt_search_tanggal" name="customer_lahir">
+															<input type="text" class="form-control kt-datepicker" readonly="" placeholder="Tanggal" name="customer_lahir">
 															<div class="input-group-append">
 																<span class="input-group-text">
 																	<i class="la la-calendar-check-o"></i>
@@ -481,7 +481,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													<label class="col-sm-4 col-form-label">Tanggal :</label>
 													<div class="col-sm-8">
 														<div class="input-group date">
-															<input type="text" class="form-control kt_search_tanggal" placeholder="Tanggal" name="jadwal_tanggal" readonly>
+															<input type="text" class="form-control kt-datepicker" placeholder="Tanggal" name="jadwal_tanggal" readonly>
 															<div class="input-group-append">
 																<span class="input-group-text">
 																	<i class="la la-calendar-check-o"></i>
