--- a/user_admin/listTreatment_detail_done.html
+++ b/user_admin/listTreatment_detail_done.html
@@ -530,10 +530,10 @@ License: You must have a valid license purchased only from themeforest(the above
                                                     <label for="example-text-input" class="col-4 col-form-label">Diskon</label>
                                                     <div class="col-8">
 														<div class="input-group">
-		                                                    <input type="text" class="form-control kt-margin-r-5" name="pembayaran_diskon" placeholder="Diskon">
+		                                                    <input type="text" class="form-control kt-margin-r-5" name="pembayaran_diskon" style="border-radius: 4px;" placeholder="Diskon">
 															<button type="button" class="btn btn-success">Submit</button>
 														</div>
-														<span class="form-text text-muted">Potongan harga : <span class="kt-font-danger" name="pembayaran_diskon_nominal">Rp. 50.000,-</span></span>
+														<span class="form-text text-muted">Potongan harga : <span class="kt-font-brand" name="pembayaran_diskon_nominal">Rp. 50.000,-</span></span>
                                                     </div>
                                                 </div>
 	                                        </div>
