--- a/user_admin/profile_kehadiran.html
+++ b/user_admin/profile_kehadiran.html
@@ -324,7 +324,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
                                 <div class="col-12">
 									<div class="row">
-		                                <div class="col-lg-3 col-md-6">
+		                                <div class="col-lg-3 col-sm-6">
 		                                    <div class="kt-portlet kt-portlet--height-fluid">
 		                                    	<div class="kt-widget14">
 		                                    		<div class="kt-widget14__header" style="margin-bottom:0px;">
@@ -338,7 +338,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		                                    	</div>
 		                                    </div>
 		                                </div>
-		                                <div class="col-lg-3 col-md-6">
+		                                <div class="col-lg-3 col-sm-6">
 		                                    <div class="kt-portlet kt-portlet--height-fluid">
 		                                    	<div class="kt-widget14">
 		                                    		<div class="kt-widget14__header" style="margin-bottom:0px;">
@@ -352,7 +352,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		                                    	</div>
 		                                    </div>
 		                                </div>
-		                                <div class="col-lg-3 col-md-6">
+		                                <div class="col-lg-3 col-sm-6">
 		                                    <div class="kt-portlet kt-portlet--height-fluid">
 		                                    	<div class="kt-widget14">
 		                                    		<div class="kt-widget14__header" style="margin-bottom:0px;">
@@ -366,7 +366,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		                                    	</div>
 		                                    </div>
 		                                </div>
-		                                <div class="col-lg-3 col-md-6">
+		                                <div class="col-lg-3 col-sm-6">
 		                                    <div class="kt-portlet kt-portlet--height-fluid">
 		                                    	<div class="kt-widget14">
 		                                    		<div class="kt-widget14__header" style="margin-bottom:0px;">
@@ -401,6 +401,21 @@ License: You must have a valid license purchased only from themeforest(the above
 											</div>
 										</div>
 										<div class="kt-portlet__body">
+											<form class="kt-margin-b-5">
+    											<div class="row justify-space-between">
+													<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
+														<input readonly type="text" class="form-control kt-datepicker" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="datepicker_kehadiran"/>
+														<div class="input-group-append">
+															<span class="input-group-text">
+																<i class="la la-calendar"></i>
+															</span>
+														</div>
+													</div>
+													<div class="col-lg-4 col-sm-6">
+	    												<input type="text" class="form-control" placeholder="Search" id="search_kehadiran">
+													</div>
+    											</div>
+    										</form>
                                             <table class="table table-bordered table-hover table-checkable" id="table_kehadiran"></table>
 										</div>
 									</div>
