Admin treatment detail perbaikan sedikit

--- a/user_admin/listTreatment_detail_paid.html
+++ b/user_admin/listTreatment_detail_paid.html
@@ -330,7 +330,7 @@ License: You must have a valid license purchased only from themeforest(the above
 										<div class="kt-portlet__head">
 											<div class="kt-portlet__head-label">
 												<h3 class="kt-portlet__head-title">
-													Treatment Status : <span class="kt-portlet__head-title kt-font-success">Done</span>
+													Treatment Status : <span class="kt-portlet__head-title kt-font-primary">Paid</span>
 												</h3>
 											</div>
 											<div class="kt-portlet__head-toolbar">
@@ -371,19 +371,6 @@ License: You must have a valid license purchased only from themeforest(the above
 		                                                <span class="kt-font-bold" name="customer_nohp">081342497228</span>&nbsp;<br>
 		                                                <span class="kt-font-bold" name="customer_alamat">Jl. Areopala 6</span>&nbsp;<br>
 													</div>
-													<!-- <div class="col-6">
-														<div class="row">
-															<div class="col-12" style="text-align: right; margin-bottom:5px;">
-																<button class="col-5 btn btn-warning no-print" onclick="printFunction()">Print</button>
-															</div>
-															<div class="col-12" style="text-align: right; margin-bottom:5px;">
-																<button class="col-5 btn btn-brand no-print">Foto</button>
-															</div>
-															<div class="col-12" style="text-align: right;">
-																<button class="col-5 btn btn-danger no-print" data-toggle="modal" data-target="#kt_modal_treatment_complaint">Complaint</button>
-															</div>
-														</div>
-													</div> -->
 	                                            </div>
 	                                            <table class="col-sm-12 col-md-8 col-lg-6" style="margin-bottom:50px">
 	                                                <tr>
@@ -391,23 +378,8 @@ License: You must have a valid license purchased only from themeforest(the above
 	                                                    <th width="10%">:</th>
 	                                                    <th width="60%"style="font-weight:500;" name="treatment_hari">2 Oktober 2019</th>
 	                                                </tr>
-	                                                <!-- <tr>
-	                                                    <th>Therapist</th>
-	                                                    <th>:</th>
-	                                                    <th style="font-weight:500;" name="treatment_therapist">Ka</th>
-	                                                </tr> -->
 	                                            </table>
 	        									<table class="table table-bordered table-hover table-checkable" id="table_spk_paid"></table>
-	                                            <!-- <div class="col-12 justify-end" style="padding: 0px 0px">
-	                                                <div style="text-align:right;width:50%">
-	                                                    <span class="kt-font-bold">Sub-Total :</span>&nbsp;
-	    	                                            <span name="price_subTotal">Rp 550.000,00</span>&nbsp;<br>
-	                                                    <span class="kt-font-bold">Diskon :</span>&nbsp;
-	    	                                            <span name="price_diskon">Rp 50.000,00</span>&nbsp;<br>
-	                                                    <span class="kt-font-bold">Total :</span>&nbsp;
-	    	                                            <span name="price_total">Rp 500.000,00</span>&nbsp;
-	                                                </div>
-	                                            </div> -->
 												<div class="row" style="margin-top:50px;">
 													<div class="col-6" style="padding-right:0px;">
 														<table class="col-sm-24 col-md-16 col-lg-12" style="bottom: 0px; position: absolute;">
@@ -470,11 +442,6 @@ License: You must have a valid license purchased only from themeforest(the above
 	                                                    <th width="10%">:</th>
 	                                                    <th width="60%"style="font-weight:500;" name="treatment_hari">2 Oktober 2019</th>
 	                                                </tr>
-	                                                <!-- <tr>
-	                                                    <th>Therapist</th>
-	                                                    <th>:</th>
-	                                                    <th style="font-weight:500;" name="treatment_therapist">Ka</th>
-	                                                </tr> -->
 	                                            </table>
 	        									<table class="table table-bordered table-hover table-checkable" id="table_invoice"></table>
 	                                            <div class="col-12 justify-end" style="padding: 0px 0px">
@@ -561,7 +528,6 @@ License: You must have a valid license purchased only from themeforest(the above
 															<input type="checkbox" name="complaint_garansi"> Gunakan garansi
 															<span></span>
 														</label><br>
-														<!-- <a href="#"><span class="form-test ">Syarat & ketentuan berlaku</span></a> -->
 													</div>
 												</div>
 	                                        </div>
