--- a/user_admin/listTreatment_detail_done.html
+++ b/user_admin/listTreatment_detail_done.html
@@ -372,12 +372,6 @@ License: You must have a valid license purchased only from themeforest(the above
 														</div>
 														<div class="col-6">
 															<div class="row">
-																<!-- <div class="col-12" style="text-align: right; margin-bottom:5px;">
-																	<button class="col-5 btn btn-warning no-print" onclick="printFunction()">Print</button>
-																</div>
-																<div class="col-12" style="text-align: right; margin-bottom:5px;">
-																	<button class="col-5 btn btn-danger no-print" id="kt_sweetalert_void">Void</button>
-																</div> -->
 															</div>
 														</div>
 		                                            </div>
@@ -389,12 +383,9 @@ License: You must have a valid license purchased only from themeforest(the above
 		                                                </tr>
 		                                            </table>
 		        									<table class="table table-bordered table-hover table-checkable" id="table_spk_done"></table>
-													<!-- <div class="col-12 horizontal-centered" style="padding: 0px 0px" style="margin-bottom:0px;">
-														<button type="button" class="btn btn-link no-print" style="padding-right:0px;"><i class="flaticon-add"></i>Tambah Treatment</button>
-													</div> -->
 													<div class="row" style="margin-top:50px;">
 														<div class="col-6" style="padding-right:0px;">
-															<table class="col-sm-24 col-md-16 col-lg-12" style="bottom: 0px; position: absolute;">
+															<table class="col-sm-24 col-md-16 col-lg-12" style="bottom: 0px;">
 				                                                <tr>
 				                                                    <th width="35%">Waktu Mulai</th>
 				                                                    <th width="10%">:</th>
