Admin datatable datepicker perbaikan (diinput ke dalam datatables)

--- a/user_admin/finance_pengeluaran.html
+++ b/user_admin/finance_pengeluaran.html
@@ -343,7 +343,7 @@ License: You must have a valid license purchased only from themeforest(the above
 											<form class="kt-margin-b-5">
     											<div class="row justify-space-between">
 													<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
-														<input readonly type="text" class="form-control kt-datepicker" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="datepicker_finance_pengeluaran"/>
+														<input readonly type="text" class="form-control" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="datepicker_finance_pengeluaran"/>
 														<div class="input-group-append">
 															<span class="input-group-text">
 																<i class="la la-calendar"></i>
