--- a/user_admin/index.html
+++ b/user_admin/index.html
@@ -495,7 +495,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													<label class="col-sm-4 col-form-label">Waktu :</label>
 													<div class="col-sm-8">
 														<div class="input-group timepicker">
-															<input class="form-control" id="kt_timepicker_2" placeholder="Select time" type="text" name="jadwal_waktu" readonly/>
+															<input class="form-control kt-timepicker" placeholder="Select time" type="text" name="jadwal_waktu" readonly/>
 															<div class="input-group-append">
 																<span class="input-group-text">
 																	<i class="la la-clock-o"></i>
