Supervisor studio perbaikan datepicker and monthpicker, esp on datatable

--- a/user_supervisor_studio/stock_detail.html
+++ b/user_supervisor_studio/stock_detail.html
@@ -383,10 +383,10 @@ License: You must have a valid license purchased only from themeforest(the above
 											</div>
 										</div>
 										<div class="kt-portlet__body">
-											<form class="kt-form kt-form--fit kt-margin-b-10">
+											<form class="kt-form kt-form--fit kt-margin-b-5">
     											<div class="row justify-space-between">
 													<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
-														<input readonly type="text" class="form-control kt-input_month" name="start" placeholder="Pilih Bulan" data-col-index="1" id="kt_search_month"/>
+														<input readonly type="text" class="form-control" name="start" placeholder="Pilih Bulan" data-col-index="1" id="monthpicker_stock_detail"/>
 														<div class="input-group-append">
 															<span class="input-group-text">
 																<i class="la la-calendar"></i>
@@ -394,22 +394,11 @@ License: You must have a valid license purchased only from themeforest(the above
 														</div>
 													</div>
 													<div class="col-lg-4 col-sm-6">
-	    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
+	    												<input type="text" class="form-control" placeholder="Search" id="search_stock_detail">
 													</div>
     											</div>
     										</form>
                                             <table class="table table-bordered table-hover table-checkable" id="table_stock_detail"></table>
-										</div>
-										<div class="kt-portlet__foot kt-hidden">
-											<div class="row">
-												<div class="col-lg-6">
-													Portlet footer:
-												</div>
-												<div class="col-lg-6">
-													<button type="submit" class="btn btn-primary">Submit</button>
-													<span class="kt-margin-left-10">or <a href="#" class="kt-link kt-font-bold">Cancel</a></span>
-												</div>
-											</div>
 										</div>
 									</div>
 
