--- a/user_supervisor_studio/karyawan_detail.html
+++ b/user_supervisor_studio/karyawan_detail.html
@@ -424,10 +424,10 @@ License: You must have a valid license purchased only from themeforest(the above
                                                     </div>
 												</div>
 												<div class="tab-pane" id="tab-complaint" role="tabpanel">
-        											<form class="kt-margin-b-10">
+        											<form class="kt-margin-b-5">
             											<div class="row justify-space-between">
         													<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
-        														<input readonly type="text" class="form-control kt-input" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu"/>
+        														<input readonly type="text" class="form-control" name="start" placeholder="Pilih Bulan" data-col-index="1" id="monthpicker_complaint"/>
         														<div class="input-group-append">
         															<span class="input-group-text">
         																<i class="la la-calendar"></i>
@@ -435,17 +435,17 @@ License: You must have a valid license purchased only from themeforest(the above
         														</div>
         													</div>
         													<div class="col-lg-4 col-sm-6">
-        	    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
+        	    												<input type="text" class="form-control" placeholder="Search" id="search_complaint">
         													</div>
             											</div>
             										</form>
                                                     <table class="table table-bordered table-hover table-checkable" id="table_complaint"></table>
 												</div>
 												<div class="tab-pane" id="tab-kehadiran" role="tabpanel">
-													<form class="kt-margin-b-10">
+													<form class="kt-margin-b-5">
 		    											<div class="row justify-space-between">
 															<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
-																<input readonly type="text" class="form-control kt-input_2" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu_2"/>
+																<input readonly type="text" class="form-control" name="start" placeholder="Pilih Bulan" data-col-index="1" id="monthpicker_karyawan_kehadiran_detail"/>
 																<div class="input-group-append">
 																	<span class="input-group-text">
 																		<i class="la la-calendar"></i>
@@ -453,11 +453,11 @@ License: You must have a valid license purchased only from themeforest(the above
 																</div>
 															</div>
 															<div class="col-lg-4 col-sm-6">
-			    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
+			    												<input type="text" class="form-control" placeholder="Search" id="search_karyawan_kehadiran_detail">
 															</div>
 		    											</div>
 		    										</form>
-													<table class="table table-bordered table-hover table-checkable" id="table_karyawan_kehadiran"></table>
+													<table class="table table-bordered table-hover table-checkable" id="table_karyawan_kehadiran_detail"></table>
 												</div>
 												<div class="tab-pane" id="tab-inventory" role="tabpanel">
                                                     <ul class="nav nav-tabs nav-fill" role="tablist">
@@ -473,28 +473,13 @@ License: You must have a valid license purchased only from themeforest(the above
         											</ul>
                                                     <div class="tab-content">
         												<div class="tab-pane active" id="tab-sisa" role="tabpanel">
-															<form class="kt-margin-b-10">
-				    											<div class="row justify-space-between">
-																	<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
-																		<input readonly type="text" class="form-control kt-input_2" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu_2"/>
-																		<div class="input-group-append">
-																			<span class="input-group-text">
-																				<i class="la la-calendar"></i>
-																			</span>
-																		</div>
-																	</div>
-																	<div class="col-lg-4 col-sm-6">
-					    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
-																	</div>
-				    											</div>
-				    										</form>
                                                             <table class="table table-bordered table-hover table-checkable" id="table_karyawan_inventory_sisa"></table>
         												</div>
         												<div class="tab-pane" id="tab-penggunaan" role="tabpanel">
-															<form class="kt-margin-b-10">
+															<form class="kt-margin-b-5">
 				    											<div class="row justify-space-between">
 																	<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
-																		<input readonly type="text" class="form-control kt-input_2" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu_2"/>
+																		<input readonly type="text" class="form-control" name="start" placeholder="Pilih Bulan" data-col-index="1" id="monthpicker_karyawan_inventory_penggunaan"/>
 																		<div class="input-group-append">
 																			<span class="input-group-text">
 																				<i class="la la-calendar"></i>
@@ -502,17 +487,17 @@ License: You must have a valid license purchased only from themeforest(the above
 																		</div>
 																	</div>
 																	<div class="col-lg-4 col-sm-6">
-					    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
+					    												<input type="text" class="form-control" placeholder="Search" id="search_karyawan_inventory_penggunaan">
 																	</div>
 				    											</div>
 				    										</form>
                                                             <table class="table table-bordered table-hover table-checkable" id="table_karyawan_inventory_penggunaan"></table>
         												</div>
         												<div class="tab-pane" id="tab-request" role="tabpanel">
-															<form class="kt-margin-b-10">
+															<form class="kt-margin-b-5">
 				    											<div class="row justify-space-between">
 																	<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
-																		<input readonly type="text" class="form-control kt-input_2" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu_2"/>
+																		<input readonly type="text" class="form-control" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="monthpicker_karyawan_inventory_request"/>
 																		<div class="input-group-append">
 																			<span class="input-group-text">
 																				<i class="la la-calendar"></i>
@@ -520,7 +505,7 @@ License: You must have a valid license purchased only from themeforest(the above
 																		</div>
 																	</div>
 																	<div class="col-lg-4 col-sm-6">
-					    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
+					    												<input type="text" class="form-control" placeholder="Search" id="search_karyawan_inventory_request">
 																	</div>
 				    											</div>
 				    										</form>
