--- a/user_supervisor_studio/profile_kehadiran.html
+++ b/user_supervisor_studio/profile_kehadiran.html
@@ -398,6 +398,21 @@ License: You must have a valid license purchased only from themeforest(the above
 											</div>
 										</div>
 										<div class="kt-portlet__body">
+											<form class="kt-form kt-form--fit kt-margin-b-5">
+    											<div class="row justify-space-between">
+													<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
+														<input readonly type="text" class="form-control" name="start" placeholder="Pilih Bulan" data-col-index="1" id="monthpicker_kehadiran"/>
+														<div class="input-group-append">
+															<span class="input-group-text">
+																<i class="la la-calendar"></i>
+															</span>
+														</div>
+													</div>
+													<div class="col-lg-4 col-sm-6">
+	    												<input type="text" class="form-control" placeholder="Search" id="search_kehadiran">
+													</div>
+    											</div>
+    										</form>
                                             <table class="table table-bordered table-hover table-checkable" id="table_kehadiran"></table>
 										</div>
 									</div>
@@ -421,7 +436,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                     <label for="example-text-input" class="col-3 col-form-label">Tanggal</label>
                                                     <div class="col-9">
 														<div class="input-group date">
-	                                                        <input type="text" class="form-control kt_multidatepicker" placeholder="Tanggal" name="dayoff_tanggal">
+	                                                        <input type="text" class="form-control kt-multidatepicker" placeholder="Tanggal" name="dayoff_tanggal">
 															<div class="input-group-append">
 																<span class="input-group-text">
 																	<i class="la la-calendar-check-o"></i>
@@ -440,6 +455,21 @@ License: You must have a valid license purchased only from themeforest(the above
     														<option>Sakit</option>
     														<option>Lain-lain</option>
     													</select>
+                                                    </div>
+                                                </div>
+												<div class="form-group row">
+                                                    <label for="example-text-input" class="col-3 col-form-label">Notes</label>
+                                                    <div class="col-9">
+														<textarea class="form-control" name="dayoff_notes" rows="3" placeholder="Notes"></textarea>
+                                                    </div>
+                                                </div>
+                                                <div class="form-group row">
+                                                    <label for="example-text-input" class="col-3 col-form-label">Foto</label>
+                                                    <div class="col-9">
+														<div class="custom-file">
+															<input type="file" class="custom-file-input" name="dayoff_foto" accept="image/*">
+															<label class="custom-file-label">Choose file</label>
+														</div>
                                                     </div>
                                                 </div>
 	                                        </div>
