Therapist datatable perbaikan datepicker/monthpicker and search filter, beberapa bug di datatable supervisor studio

--- a/user_therapist/inventory_request.html
+++ b/user_therapist/inventory_request.html
@@ -318,10 +318,10 @@ License: You must have a valid license purchased only from themeforest(the above
 											</div>
 										</div>
 										<div class="kt-portlet__body">
-											<form class="kt-form kt-form--fit kt-margin-b-10">
+											<form class="kt-form kt-form--fit kt-margin-b-5">
     											<div class="row justify-space-between">
 													<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
-														<input readonly type="text" class="form-control kt-input" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu"/>
+														<input readonly type="text" class="form-control" name="start" placeholder="Pilih Bulan" data-col-index="1" id="monthpicker_inventory_request"/>
 														<div class="input-group-append">
 															<span class="input-group-text">
 																<i class="la la-calendar"></i>
@@ -329,7 +329,7 @@ License: You must have a valid license purchased only from themeforest(the above
 														</div>
 													</div>
 													<div class="col-lg-4 col-sm-6">
-	    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
+	    												<input type="text" class="form-control" placeholder="Search" id="search_inventory_request">
 													</div>
     											</div>
     										</form>
