--- a/user_therapist/profile_kehadiran.html
+++ b/user_therapist/profile_kehadiran.html
@@ -380,6 +380,21 @@ License: You must have a valid license purchased only from themeforest(the above
 											</div>
 										</div>
 										<div class="kt-portlet__body">
+											<form class="kt-form kt-form--fit kt-margin-b-5">
+    											<div class="row justify-space-between">
+													<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
+														<input readonly type="text" class="form-control" name="start" placeholder="Pilih Bulan" data-col-index="1" id="monthpicker_kehadiran"/>
+														<div class="input-group-append">
+															<span class="input-group-text">
+																<i class="la la-calendar"></i>
+															</span>
+														</div>
+													</div>
+													<div class="col-lg-4 col-sm-6">
+	    												<input type="text" class="form-control" placeholder="Search" id="search_kehadiran">
+													</div>
+    											</div>
+    										</form>
                                             <table class="table table-bordered table-hover table-checkable" id="table_kehadiran"></table>
 										</div>
 									</div>
@@ -403,7 +418,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                     <label for="example-text-input" class="col-3 col-form-label">Tanggal</label>
                                                     <div class="col-9">
 														<div class="input-group date">
-	                                                        <input type="text" class="form-control kt_multidatepicker" placeholder="Tanggal" name="dayoff_tanggal">
+	                                                        <input type="text" class="form-control kt-multidatepicker" placeholder="Tanggal" name="dayoff_tanggal">
 															<div class="input-group-append">
 																<span class="input-group-text">
 																	<i class="la la-calendar-check-o"></i>
