Gudang monthpicker/datepicker dan search datatable

--- a/user_gudang/stock_history.html
+++ b/user_gudang/stock_history.html
@@ -335,10 +335,10 @@ License: You must have a valid license purchased only from themeforest(the above
 										<div class="kt-portlet__body">
 											<div class="tab-content">
 												<div class="tab-pane active" id="tab-in" role="tabpanel">
-													<form class="kt-margin-b-10">
+													<form class="kt-margin-b-5">
 		    											<div class="row justify-space-between">
 															<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
-																<input readonly type="text" class="form-control kt-input" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu"/>
+																<input readonly type="text" class="form-control" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="datepicker_stock_history_in"/>
 																<div class="input-group-append">
 																	<span class="input-group-text">
 																		<i class="la la-calendar"></i>
@@ -346,17 +346,17 @@ License: You must have a valid license purchased only from themeforest(the above
 																</div>
 															</div>
 															<div class="col-lg-4 col-sm-6">
-			    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
+			    												<input type="text" class="form-control" placeholder="Search" id="search_stock_history_in">
 															</div>
 		    											</div>
 		    										</form>
 													<table class="table table-bordered table-hover table-checkable" id="table_stock_history_in"></table>
 												</div>
 												<div class="tab-pane" id="tab-out" role="tabpanel">
-													<form class="kt-margin-b-10">
+													<form class="kt-margin-b-5">
 		    											<div class="row justify-space-between">
 															<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
-																<input readonly type="text" class="form-control kt-input_2" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu_2"/>
+																<input readonly type="text" class="form-control" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="datepicker_stock_history_out"/>
 																<div class="input-group-append">
 																	<span class="input-group-text">
 																		<i class="la la-calendar"></i>
@@ -364,7 +364,7 @@ License: You must have a valid license purchased only from themeforest(the above
 																</div>
 															</div>
 															<div class="col-lg-4 col-sm-6">
-			    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
+			    												<input type="text" class="form-control" placeholder="Search" id="search_stock_history_out">
 															</div>
 		    											</div>
 		    										</form>
