Superadmin navbar md studio

--- a/user_superadmin/md_complaint.html
+++ b/user_superadmin/md_complaint.html
@@ -132,6 +132,7 @@ License: You must have a valid license purchased only from themeforest(the above
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/md_treatment.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Treatment</span></a></li>
 											<li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="user_superadmin/md_complaint.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Complaint</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/md_komisi.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Komisi</span></a></li>
+											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/md_studio.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Studio</span></a></li>
 										</ul>
 									</div>
 								</li>
