superadmin hr laporan select studio

--- a/user_superadmin/hr_laporan.html
+++ b/user_superadmin/hr_laporan.html
@@ -345,16 +345,16 @@ License: You must have a valid license purchased only from themeforest(the above
 
                             <div class="row justify-space-between kt-margin-0">
                                 <h4 class="vertical-align" style="margin-bottom: 20px;">Laporan Karyawan</h4>
-                                <!-- <div class="col-lg-3 col-sm-4" style="padding:unset;margin-bottom: 20px;">
-                                    <div class="input-group date">
-										<input readonly type="text" class="form-control kt-input" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu"/>
-										<div class="input-group-append">
-											<span class="input-group-text">
-												<i class="la la-calendar"></i>
-											</span>
-										</div>
-                                    </div>
-                                </div> -->
+                                <div class="col-lg-4 col-sm-6" style="padding:unset;margin-bottom: 20px;">
+									<select class="form-control" id="exampleSelectd">
+										<option value="" selected disabled>Pilih Studio</option>
+										<option>Studio Cabang Hasanuddin</option>
+										<option>Studio Cabang Dg. Tata</option>
+										<option>Studio Cabang Hasanuddin</option>
+										<option>Studio Cabang Dg. Tata</option>
+										<option>Studio Cabang Hasanuddin</option>
+									</select>
+                                </div>
 							</div>
 
 							<div class="row">
