--- a/user_superadmin/hr_karyawan_detail.html
+++ b/user_superadmin/hr_karyawan_detail.html
@@ -18,7 +18,7 @@ License: You must have a valid license purchased only from themeforest(the above
 	<head>
 		<base href="../">
 		<meta charset="utf-8" />
-		<title>Detail Karyawan | Superadmin Fabulash</title>
+		<title>Profile Karyawan | Superadmin Fabulash</title>
 		<meta name="description" content="Updates and statistics">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -336,7 +336,7 @@ License: You must have a valid license purchased only from themeforest(the above
 											Daftar karyawan </a>
 										<span class="kt-subheader__breadcrumbs-separator"></span>
 										<a href="user_superadmin/hr_karyawan_detail.html" class="kt-subheader__breadcrumbs-link">
-											Detail karyawan </a>
+											Profile karyawan </a>
 									</div>
 								</div>
 							</div>
@@ -359,7 +359,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													<i class="flaticon2-cube-1"></i>
 												</span>
 												<h3 class="kt-portlet__head-title">
-													Detail Karyawan
+													Profile Karyawan
 												</h3>
 											</div>
 											<div class="kt-portlet__head-toolbar">
